--- a/public/index.html
+++ b/public/index.html
@@ -37,9 +37,8 @@
       <!-- Collect the nav links, forms, and other content for toggling -->
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav">
-          <li class="active"><a href="#">Link <span class="sr-only">(current)</span></a>
+          <li class="active"><a href="#">Devices <span class="sr-only">(current)</span></a>
           </li>
-          <li><a href="#">Devices</a>
           </li>
           <li><a href="#scenes">Scenes</a>
           </li>
