--- a/public/index.html
+++ b/public/index.html
@@ -20,6 +20,23 @@
     <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
   <![endif]-->
 
+  <div id="status-modal" class="modal fade">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+          <h4 class="modal-title">Modal title</h4>
+        </div>
+        <div class="modal-body">
+          <p id="status-modal-content"></p>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-primary" data-dismiss="modal">Close</button>
+        </div>
+      </div><!-- /.modal-content -->
+    </div><!-- /.modal-dialog -->
+  </div><!-- /.modal -->
+
 
   <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
     <div class="container-fluid">
@@ -72,18 +89,22 @@
 
   <script src="bower_components/jquery/dist/jquery.min.js"></script>
   <script src="bower_components/angular/angular.min.js"></script>
+<!--
   <script src="bower_components/bootstrap/js/affix.js"></script>
   <script src="bower_components/bootstrap/js/alert.js"></script>
   <script src="bower_components/bootstrap/js/dropdown.js"></script>
   <script src="bower_components/bootstrap/js/tooltip.js"></script>
+-->
   <script src="bower_components/bootstrap/js/modal.js"></script>
   <script src="bower_components/bootstrap/js/transition.js"></script>
   <script src="bower_components/bootstrap/js/button.js"></script>
+<!--
   <script src="bower_components/bootstrap/js/popover.js"></script>
   <script src="bower_components/bootstrap/js/carousel.js"></script>
   <script src="bower_components/bootstrap/js/scrollspy.js"></script>
   <script src="bower_components/bootstrap/js/collapse.js"></script>
   <script src="bower_components/bootstrap/js/tab.js"></script>
+-->
 
 
   <script src="js/main.js"></script>
