--- a/public/index.html
+++ b/public/index.html
@@ -54,12 +54,12 @@
       <!-- Collect the nav links, forms, and other content for toggling -->
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav">
-          <li class="active"><a href="#">Devices <span class="sr-only">(current)</span></a>
+          <li class="active" lg-tab><a href="#">Devices <span class="sr-only">(current)</span></a>
           </li>
           </li>
-          <li><a href="#scenes">Scenes</a>
+          <li lg-tab><a href="#scenes">Scenes</a>
           </li>
-          <li><a href="#config">Config</a>
+          <li lg-tab><a href="#config">Config</a>
           </li>
         </ul>
       </div>
