--- a/public/index.html
+++ b/public/index.html
@@ -75,6 +75,7 @@
     </div>
   </div>
 
+  <script src="bower_components/fastclick/lib/fastclick.js"></script>
   <script src="bower_components/jquery/dist/jquery.min.js"></script>
   <script src="bower_components/angular/angular.min.js"></script>
   <script src="bower_components/angular-route/angular-route.min.js"></script>
