--- a/app/index.html
+++ b/app/index.html
@@ -11,11 +11,11 @@
   <link rel="shortcut icon" href="/favicon.ico">
   <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 
-  <!-- build:css(.) styles/vendor.css -->
+  <!-- build:css(.) css/vendor.css -->
   <!-- bower:css -->
   <!-- endbower -->
   <!-- endbuild -->
-  <!-- build:css(.tmp) public/css/main.css -->
+  <!-- build:css(.tmp) css/main.css -->
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css">
   <!-- endbuild -->
@@ -82,7 +82,7 @@
   </div>
 
 
-  <!-- build:js(.) scripts/vendor.js -->
+  <!-- build:js(.) js/vendor.js -->
   <!-- bower:js -->
   <script src="bower_components/jquery/dist/jquery.js"></script>
   <script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
@@ -91,24 +91,7 @@
   <!-- endbower -->
   <!-- endbuild -->
 
-  <!-- build:js({app,.tmp}) public/js/main.js -->
-  <script src="bower_components/jquery/dist/jquery.min.js"></script>
-  <script src="bower_components/angular/angular.min.js"></script>
-  <script src="bower_components/angular-route/angular-route.min.js"></script>
-
-  <script src="bower_components/bootstrap/js/alert.js"></script>
-  <script src="bower_components/bootstrap/js/dropdown.js"></script>
-  <script src="bower_components/bootstrap/js/tooltip.js"></script>
-
-  <script src="bower_components/bootstrap/js/modal.js"></script>
-  <script src="bower_components/bootstrap/js/transition.js"></script>
-  <script src="bower_components/bootstrap/js/button.js"></script>
-
-  <script src="bower_components/bootstrap/js/popover.js"></script>
-  <script src="bower_components/bootstrap/js/carousel.js"></script>
-  <script src="bower_components/bootstrap/js/scrollspy.js"></script>
-  <script src="bower_components/bootstrap/js/collapse.js"></script>
-  <script src="bower_components/bootstrap/js/tab.js"></script>
+  <!-- build:js({app,.tmp}) js/main.js -->
   <script src="js/main.js"></script>
   <!-- endbuild -->
 
