--- a/app/index.html
+++ b/app/index.html
@@ -13,11 +13,11 @@
 
   <!-- build:css(.) css/vendor.css -->
   <!-- bower:css -->
+  <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css" />
   <!-- endbower -->
   <!-- endbuild -->
   <!-- build:css(.tmp) css/main.css -->
   <link rel="stylesheet" href="css/style.css">
-  <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css">
   <!-- endbuild -->
 </head>
 
