--- a/app/index.html
+++ b/app/index.html
@@ -89,6 +89,7 @@
   <script src="bower_components/angular/angular.js"></script>
   <script src="bower_components/angular-route/angular-route.js"></script>
   <script src="bower_components/fastclick/lib/fastclick.js"></script>
+  <script src="bower_components/ngCordova/dist/ng-cordova.js"></script>
   <!-- endbower -->
   <!-- endbuild -->
 
